load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/openshift/installer/installer/cmd/tectonic",
    visibility = ["//visibility:private"],
    deps = [
        "//installer/pkg/workflow:go_default_library",
        "//vendor/github.com/Sirupsen/logrus:go_default_library",
        "//vendor/gopkg.in/alecthomas/kingpin.v2:go_default_library",
    ],
)

go_binary(
    name = "tectonic",
    out = "tectonic",
    data = ["//:template_resources"],
    embed = [":go_default_library"],
    # Use pure to build a pure-go binary.
    # This has the nice side effect of making the binary statically linked.
    pure = "on",
    visibility = ["//visibility:public"],
)
