load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "getters.go",
        "validations.go",
    ],
    importpath = "github.com/coreos/tectonic-installer/installer/pkg/aws",
    visibility = ["//visibility:public"],
    deps = [
        "//installer/vendor/github.com/aws/aws-sdk-go/aws:go_default_library",
        "//installer/vendor/github.com/aws/aws-sdk-go/aws/session:go_default_library",
        "//installer/vendor/github.com/aws/aws-sdk-go/service/ec2:go_default_library",
        "//installer/vendor/github.com/aws/aws-sdk-go/service/route53:go_default_library",
        "//installer/vendor/github.com/coreos/ipnets:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["validations_test.go"],
    importpath = "github.com/coreos/tectonic-installer/installer/pkg/aws",
    library = ":go_default_library",
)
