load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "generator.go",
        "ignition.go",
        "tls.go",
        "utils.go",
    ],
    importpath = "github.com/coreos/tectonic-installer/installer/pkg/config-generator",
    visibility = ["//visibility:public"],
    deps = [
        "//installer/pkg/config:go_default_library",
        "//installer/pkg/tls:go_default_library",
        "//vendor/github.com/apparentlymart/go-cidr/cidr:go_default_library",
        "//vendor/github.com/coreos/ignition/config/v2_2:go_default_library",
        "//vendor/github.com/coreos/ignition/config/v2_2/types:go_default_library",
        "//vendor/github.com/coreos/tectonic-config/config/kube-addon:go_default_library",
        "//vendor/github.com/coreos/tectonic-config/config/kube-core:go_default_library",
        "//vendor/github.com/coreos/tectonic-config/config/tectonic-network:go_default_library",
        "//vendor/github.com/coreos/tectonic-config/config/tectonic-node-controller:go_default_library",
        "//vendor/github.com/coreos/tectonic-config/config/tectonic-utility:go_default_library",
        "//vendor/github.com/ghodss/yaml:go_default_library",
        "//vendor/github.com/vincent-petithory/dataurl:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["generator_test.go"],
    data = glob(["fixtures/**"]),
    embed = [":go_default_library"],
    deps = ["//installer/pkg/config:go_default_library"],
)
