load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_test(
    name = "go_default_test",
    srcs = ["validate_test.go"],
    embed = [":go_default_library"],
)

go_library(
    name = "go_default_library",
    srcs = [
        "cluster.go",
        "config.go",
        "parser.go",
        "types.go",
        "validate.go",
    ],
    importpath = "github.com/coreos/tectonic-installer/installer/pkg/config",
    visibility = ["//visibility:public"],
    deps = [
        "//installer/pkg/config/aws:go_default_library",
        "//installer/pkg/config/azure:go_default_library",
        "//installer/pkg/config/gcp:go_default_library",
        "//installer/pkg/config/govcloud:go_default_library",
        "//installer/pkg/config/metal:go_default_library",
        "//installer/pkg/config/openstack:go_default_library",
        "//installer/pkg/config/vmware:go_default_library",
        "//installer/vendor/gopkg.in/yaml.v2:go_default_library",
    ],
)
