load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["images.go"],
    importpath = "github.com/coreos/tectonic-installer/installer/pkg/containerlinux",
    visibility = ["//visibility:public"],
    deps = [
        "//installer/vendor/github.com/Sirupsen/logrus:go_default_library",
        "//installer/vendor/github.com/coreos/go-semver/semver:go_default_library",
        "//installer/vendor/golang.org/x/net/html:go_default_library",
    ],
)
