load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "copy.go",
    ],
    importpath = "github.com/openshift/installer/installer/pkg/copy",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = [
        "copy_test.go",
    ],
    embed = [":go_default_library"],
)
