load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "buildstate.go",
    ],
    importpath = "github.com/coreos/tectonic-installer/installer/pkg/tectonic",
    visibility = ["//installer:__subpackages__"],
    deps = [
        "//installer/pkg/config:go_default_library",
        "//installer/pkg/config-generator:go_default_library",
        "//installer/pkg/terraform-generator:go_default_library",
    ],
)
