load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "aws.go",
        "azure.go",
        "gcp.go",
        "generator.go",
        "govcloud.go",
        "metal.go",
        "openstack.go",
        "tectonic.go",
        "vmware.go",
    ],
    importpath = "github.com/coreos/tectonic-installer/installer/pkg/terraform-generator",
    visibility = ["//visibility:public"],
    deps = [
        "//installer/pkg/config:go_default_library",
    ],
)
