load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["tls_test.go"],
    embed = [":go_default_library"],
)

go_library(
    name = "go_default_library",
    srcs = [
      "tls.go",
      "utils.go",
    ],
    importpath = "github.com/coreos/tectonic-installer/installer/pkg/tls",
    visibility = ["//visibility:public"],
)
