load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["validate_test.go"],
    embed = [":go_default_library"],
    deps = ["//pkg/asset/tls:go_default_library"],
)

go_library(
    name = "go_default_library",
    srcs = ["validate.go"],
    data = glob(["fixtures/**"]),
    importpath = "github.com/openshift/installer/installer/pkg/validate",
    visibility = ["//visibility:public"],
)
