load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_test(
    name = "go_default_test",
    size = "small",
    srcs = [
        "init_test.go",
        "workflow_test.go",
    ],
    data = glob(["fixtures/**"]),
    embed = [":go_default_library"],
    deps = ["//installer/pkg/config:go_default_library"],
)

go_library(
    name = "go_default_library",
    srcs = [
        "convert.go",
        "destroy.go",
        "executor.go",
        "init.go",
        "install.go",
        "terraform.go",
        "utils.go",
        "workflow.go",
    ],
    importpath = "github.com/coreos/tectonic-installer/installer/pkg/workflow",
    visibility = ["//visibility:public"],
    deps = [
        "//installer/pkg/config:go_default_library",
        "//installer/pkg/config-generator:go_default_library",
        "//installer/vendor/github.com/Sirupsen/logrus:go_default_library",
        "//installer/vendor/gopkg.in/yaml.v2:go_default_library",
    ],
)
