load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "convert.go",
        "destroy.go",
        "executor.go",
        "init.go",
        "install.go",
        "terraform.go",
        "utils.go",
        "workflow.go",
    ],
    importpath = "github.com/openshift/installer/installer/pkg/workflow",
    visibility = ["//visibility:public"],
    deps = [
        "//installer/pkg/config:go_default_library",
        "//installer/pkg/config-generator:go_default_library",
        "//installer/pkg/copy:go_default_library",
        "//vendor/github.com/Sirupsen/logrus:go_default_library",
        "//vendor/gopkg.in/yaml.v2:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/types:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/wait:go_default_library",
        "//vendor/k8s.io/client-go/tools/clientcmd:go_default_library",
        "//vendor/sigs.k8s.io/cluster-api/pkg/client/clientset_generated/clientset:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = [
        "init_test.go",
        "workflow_test.go",
    ],
    data = glob(["fixtures/**"]),
    embed = [":go_default_library"],
    deps = ["//installer/pkg/config:go_default_library"],
)
