load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "cluster.go",
        "doc.go",
        "stock.go",
        "tfvar.go",
    ],
    importpath = "github.com/openshift/installer/pkg/asset/cluster",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/asset:go_default_library",
        "//pkg/asset/ignition:go_default_library",
        "//pkg/asset/installconfig:go_default_library",
        "//pkg/terraform:go_default_library",
        "//pkg/types/config:go_default_library",
    ],
)
